typescript/checker/tests/conformance/es6/templates/templateStringInInstanceOfES6.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            110,
        ),
        hi: BytePos(
            116,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/templateStringInInstanceOfES6.ts:2:35
  |
2 | var x = `abc${ 0 }def` instanceof String;
  |                                   ^^^^^^

